# gnu_tiger

./: ANNOUNCE.3.0  AUTHORS  BUGS.EXTERN  CHANGES  CHANGES.ARSC  CREDITS  DESCRIPTION  Makefile  Makefile.in  Makefile.org-2.2.3  README  README.1st  README.hostids  README.ignore  README.linux  README.logo  README.signatures  README.sources  README.time  README.unsupported  README.writemodules  TODO  TODO.checks  USING  check.tbl  config  config.in  config.org-2.2.3  configure  configure.in  cronrc  initdefs  initdefs.tara  install.sh  issue  issue-readme.txt  issue.net  site-sample  site-sample.org-2.2.3  site-saturn  (+17 more)
audit/: README  audit_aix.sh  audit_debian.sh  audit_hpux10.sh  audit_hpux11.sh  audit_nokia.sh  audit_oracle.sql  audit_redhat.sh  audit_slackware.sh  audit_solaris.sh  audit_suse.sh  audit_windows.bat
c/: Makefile  Makefile.in  getpermit.c  md5.c  realpath.c  snefru.c  testsuid.c
check.d/: README
contrib/: fix_tiger_GROUPS.sh
debian/: README.Debian  TODO.Debian  changelog  conffiles  config  control  copyright  cron.d  debian.ignore  dirs  docs  postinst  postrm  preinst  rules  server.ignore  templates  tiger-otheros.dirs  tiger.desktop  tiger.install  tiger.links  tiger.lintian-overrides  tiger.menu  tiger.wrapper  tigexp  watch
doc/: Makefile.in  accounts.txt  aide.txt  aliases.txt  anonftp.txt  background.txt  config.txt  cron.txt  debian.txt  embed.txt  explain.idx  filesys.txt  group.txt  hpux.txt  inetd.txt  integrit.txt  issue.txt  known.txt  linux.txt  logfiles.txt  misc.txt  ndd.txt  netrc.txt  network.txt  nfs.txt  passwd.txt  paths.txt  (+10 more)
(+505 files in other folders)
